--- a/mywebserveronubuntu.yml
+++ b/mywebserveronubuntu.yml
@@ -2,7 +2,7 @@
 - hosts: all
   become: yes
   tasks:
-  - name: install webserver on ubuntu (apache2)
+  - name: install webserver on ubuntu (apache2).
     apt:
      name: apache2
      state: present
