--- a/mywebserveronubunturedhat.yml
+++ b/mywebserveronubunturedhat.yml
@@ -19,5 +19,5 @@
   - name: start the httpd service
     service:
      name: httpd
-     state: present
+     state: started
     when: ansible_os_family=="RedHat"  
