--- a/installjava6onubunturedhat.yml
+++ b/installjava6onubunturedhat.yml
@@ -4,11 +4,11 @@
   tasks:
   - name: install java6 on ubuntu
     apt:
-     name: openjdk-6-jre
+     name: javaonubuntu
      state: present
     when: ansible_os_family=="Debian"
   - name: install java6 on redhat
     yum:
-     name: java-1.6.0-openjdk
+     name: javaonredhat
      state: present
     when: ansible_os_family=="RedHat"    
